fix profile box alignment

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -153,7 +153,7 @@
                         text-align: center;
 
                         a img {
-                            padding: 1rem 2rem 2rem 2rem;
+                            padding-bottom: $spacing-unit;
                             margin-top: -1.25rem;
                         }
                     }
@@ -163,6 +163,7 @@
                         padding: 1rem 2rem 2rem 2rem;
                         margin-top: -1.25rem;
                         color: #333;
+                        text-align: left;
                     }
                 }
             }
